--- a/src/product.html
+++ b/src/product.html
@@ -2,8 +2,10 @@
 <html lang="ar" dir="rtl"> 
 <head> 
     <meta charset="utf-8"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>متجر عربي</title> 
-    <meta name="viewport" content="width=device-width,initial-scale=1"> 
+
 </head> 
 <body> 
     <div class="container-fluid">
